<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.PalletViewScreen"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <AutoCompleteTextView
        android:id="@+id/sizea2"
        android:layout_width="75dp"
        android:layout_height="41dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:hint="@string/SizeTwo"
        app:layout_constraintEnd_toStartOf="@+id/quantitya1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/stylea2"
        android:layout_width="72dp"
        android:layout_height="39dp"
        android:layout_marginTop="80dp"
        android:completionThreshold="1"
        android:hint="@string/StyleTwo"
        app:layout_constraintEnd_toStartOf="@+id/colora1"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/stylea1"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:completionThreshold="1"
        android:hint="@string/StyleOne"
        app:layout_constraintEnd_toStartOf="@+id/colora1"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/colora1"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:completionThreshold="1"
        android:hint="@string/ColorOne"
        app:layout_constraintEnd_toStartOf="@+id/sizea1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/colora2"
        android:layout_width="77dp"
        android:layout_height="39dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:completionThreshold="1"
        android:hint="@string/ColorTwo"
        app:layout_constraintEnd_toStartOf="@+id/sizea1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/sizea1"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:hint="@string/SizeOne"
        app:layout_constraintEnd_toStartOf="@+id/quantitya1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <EditText
        android:id="@+id/quantitya1"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/QuantityOne"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <EditText
        android:id="@+id/quantitya2"
        android:layout_width="77dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/QuantityTwo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/colora3"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:completionThreshold="1"
        android:hint="@string/ColorThree"
        app:layout_constraintEnd_toStartOf="@+id/sizea1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/sizea3"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:hint="@string/SizeThree"
        app:layout_constraintEnd_toStartOf="@+id/quantitya1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <EditText
        android:id="@+id/quantitya3"
        android:layout_width="77dp"
        android:layout_height="42dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/QuantityThree"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/stylea4"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginTop="196dp"
        android:completionThreshold="1"
        android:hint="@string/StyleFour"
        app:layout_constraintEnd_toStartOf="@+id/colora1"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/colora4"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="8dp"
        android:completionThreshold="1"
        android:hint="@string/ColorFour"
        app:layout_constraintEnd_toStartOf="@+id/sizea1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/sizea4"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:hint="@string/SizeFour"
        app:layout_constraintEnd_toStartOf="@+id/quantitya1"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <EditText
        android:id="@+id/quantitya4"
        android:layout_width="77dp"
        android:layout_height="42dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/QuantityFour"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <AutoCompleteTextView
        android:id="@+id/stylea3"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="136dp"
        android:completionThreshold="1"
        android:hint="@string/StyleThree"
        app:layout_constraintEnd_toStartOf="@+id/colora1"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_style_title" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/AddButton"
        app:layout_constraintBottom_toTopOf="@+id/lv_palletListByLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stylea4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/add_style_title"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/addStyle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_palletListByLocation"
        android:layout_width="352dp"
        android:layout_height="274dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizea4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/SearchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_style_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stylePo1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:hint="P.O(1)"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/quantitya1"
        app:layout_constraintTop_toTopOf="@+id/quantitya1" />

    <EditText
        android:id="@+id/stylePo2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:hint="P.O(2)"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/quantitya2"
        app:layout_constraintTop_toTopOf="@+id/quantitya2" />

    <EditText
        android:id="@+id/stylePo3"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:hint="P.O(3)"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/quantitya3"
        app:layout_constraintTop_toTopOf="@+id/quantitya3" />

    <EditText
        android:id="@+id/stylePo4"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:hint="P.O(4)"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/quantitya4"
        app:layout_constraintTop_toTopOf="@+id/quantitya4" />

</androidx.constraintlayout.widget.ConstraintLayout>